kubernetes/stuff-web-app/sd-web-app.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stuff-web-app
  labels:
    system: stuff
    service: stuff-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      service: stuff-web-app
  template:
    metadata:
      labels:
        service: stuff-web-app
    spec:
      containers:
        - name: stuff-web-app
          image: 668485322428.dkr.ecr.eu-central-1.amazonaws.com/stuff-web-app:latest
          ports:
            - containerPort: 80
