kubernetes/stuff-web-app/stuff-web-app.lb.yml
apiVersion: v1
kind: Service
metadata:
  name: stuff-web-app-lb
spec:
  type: NodePort
  selector:
    service: stuff-web-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
