kubernetes/stuff-web-app/stuff-web-app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stuff-web-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
#                TODO(Johann) change name from lb
                name: stuff-web-app-lb
                port:
                  number: 80
